# agentarmy

./: .dockerignore  .env.example  .env.example.new  .gitignore  AUDIT_PROGRESS_REPORT.md  COMPLETE_TEST_VERIFICATION.md  COMPREHENSIVE_TEST_REPORT.md  Dockerfile  EXECUTIVE_TEST_SUMMARY.md  FINAL_TEST_REPORT.md  IMPLEMENTATION_STATUS.md  MANHATTAN_PROJECT_MAPPING.md  OPTION_B_AUDIT_COMPLETE.md  PROVIDER_DOCS.md  README.md  README_TEST_RESULTS.md  SYSTEM_TEST_RESULTS.md  TEST_FAILURES_FIX_GUIDE.md  TEST_RESULTS_FULL.txt  TODO.md  TODO_CLEANUP.md  TODO_FIXES.md  TODO_MEGA_EXTENSION.md  TODO_VISION_V7.6.md  agent.py  agentarmy.py  agentarmy_state.json  app.py  cleanup.py  dashboard.html  dashboard.py  dev.bat  docker-compose.prod.yml  docker-compose.yml  filename  launch_agentarmy.sh  main.py  modelslab_llm.py  portfolio-spec.md  pyproject.toml  (+10 more)
agentarmy-dashboard/: README.md  (+11 more)
space_hitl_agent/: README.md  TODO.md  __init__.py  langgraph.yaml  main.py  pyproject.toml  requirements.txt
space_hitl_agent/config/: profiles.yaml
space_hitl_agent/docker/: Dockerfile
space_hitl_agent/nodes/: analyzer.py  attitude_analyzer.py  communications_analyzer.py  executor.py  extended_agents.py  human_approval.py  life_support_analyzer.py  logistics_analyzer.py  navigation_analyzer.py  payload_analyzer.py  power_analyzer.py  redis_state.py  safety_compliance.py  science_analyzer.py  telemetry.py  telemetry_connectors.py  thermal_analyzer.py  timeline.py
space_hitl_agent/release/: deploy_spaceos.sh
space_hitl_agent/release/config/: profiles.yaml
space_hitl_agent/ui/: dashboard.py
(+775 files in other folders)
