[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spaceos-agent"
version = "0.1.0"
description = "Commercial Space HITL AI Agent for private orbital infrastructure."
authors = [
    { name="Your Name", email="your@email.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=0.1.0",
    "google-generativeai>=0.7.0",
    "langchain-openai>=0.1.0",
    "openai>=1.0.0",
    "langchain-groq>=0.1.0",
    "langchain-xai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "anthropic>=0.18.0",
    "gradio>=4.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.0"
]
